--- a/Iksan.TinyMapper/Iksan.TinyMapper.csproj
+++ b/Iksan.TinyMapper/Iksan.TinyMapper.csproj
@@ -8,14 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.1" />
+    <PackageReference Include="TinyMapper" Version="3.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Iksan.Shared\Iksan.Shared.csproj" />
   </ItemGroup>
+
+
 
 </Project>
